gcc/testsuite/rust/rustc/ui/issues/issue-13407.rs
mod A {
    struct C;
}

fn main() {
    A::C = 1;
// { dg-error ".E0308." "" { target *-*-* } .-1 }
// { dg-error ".E0308." "" { target *-*-* } .-2 }
// { dg-error ".E0308." "" { target *-*-* } .-3 }
}

